--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ include_directories(${ONNXRUNTIME_ROOT}/include/)
 find_library(ONNXRUNTIME_LIBS onnx-runtime PATHS ${ONNXRUNTIME_ROOT}/lib)
 
 add_library(MonicaImageProcess SHARED library.cpp
-        BaseOnnxRuntime.cpp BaseOnnxRuntime.h
+        OnnxRuntimeBase.cpp OnnxRuntimeBase.h
         jni/cn_netdiscovery_monica_opencv_ImageProcess.cpp jni/cn_netdiscovery_monica_opencv_ImageProcess.h
         faceDetect/FaceDetect.cpp faceDetect/FaceDetect.h
         sketchDrawing/SketchDrawing.cpp sketchDrawing/SketchDrawing.h
