--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ include_directories(${ONNXRUNTIME_ROOT}/include/)
 find_library(ONNXRUNTIME_LIBS onnx-runtime PATHS ${ONNXRUNTIME_ROOT}/lib)
 
 add_library(MonicaImageProcess SHARED library.cpp
-        OnnxRuntimeBase.cpp OnnxRuntimeBase.h
+        src/common/OnnxRuntimeBase.cpp include/common/OnnxRuntimeBase.h
         jni/cn_netdiscovery_monica_opencv_ImageProcess.cpp jni/cn_netdiscovery_monica_opencv_ImageProcess.h
         src/faceDetect/FaceDetect.cpp include/faceDetect/FaceDetect.h
         src/sketchDrawing/SketchDrawing.cpp include/sketchDrawing/SketchDrawing.h
