--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,22 +47,24 @@ find_package(JNI REQUIRED)
 include_directories(${JNI_INCLUDE_DIRS})
 include_directories(jni)
 
-# 指定ONNX Runtime的路径
-set(ONNXRUNTIME_ROOT "/Users/Tony/onnxruntime/onnxruntime-osx-x86_64-1.10.0")
-# 包含ONNX Runtime头文件
-include_directories(${ONNXRUNTIME_ROOT}/include/)
-# 查找ONNX Runtime库文件
-find_library(ONNXRUNTIME_LIBS onnx-runtime PATHS ${ONNXRUNTIME_ROOT}/lib)
+if (${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CURRENT_PLATFORM} MATCHES "x86")
+    # 指定ONNX Runtime的路径
+    set(ONNXRUNTIME_ROOT "/Users/Tony/onnxruntime/onnxruntime-osx-x86_64-1.10.0")
+    # 包含ONNX Runtime头文件
+    include_directories(${ONNXRUNTIME_ROOT}/include/)
+    # 查找ONNX Runtime库文件
+    find_library(ONNXRUNTIME_LIBS onnx-runtime PATHS ${ONNXRUNTIME_ROOT}/lib)
 
-add_library(MonicaImageProcess SHARED
-        src/library.cpp include/library.h
-        src/common/OnnxRuntimeBase.cpp include/common/OnnxRuntimeBase.h
-        jni/cn_netdiscovery_monica_opencv_ImageProcess.cpp jni/cn_netdiscovery_monica_opencv_ImageProcess.h
-        src/faceDetect/FaceDetect.cpp include/faceDetect/FaceDetect.h
-        src/sketchDrawing/SketchDrawing.cpp include/sketchDrawing/SketchDrawing.h
-        include/Constants.h
-        src/utils/Timer.cpp include/utils/Timer.h
-        src/utils/Utils.cpp include/utils/Utils.h)
+    add_library(MonicaImageProcess SHARED
+            src/library.cpp include/library.h
+            src/common/OnnxRuntimeBase.cpp include/common/OnnxRuntimeBase.h
+            jni/cn_netdiscovery_monica_opencv_ImageProcess.cpp jni/cn_netdiscovery_monica_opencv_ImageProcess.h
+            src/faceDetect/FaceDetect.cpp include/faceDetect/FaceDetect.h
+            src/sketchDrawing/SketchDrawing.cpp include/sketchDrawing/SketchDrawing.h
+            include/Constants.h
+            src/utils/Timer.cpp include/utils/Timer.h
+            src/utils/Utils.cpp include/utils/Utils.h)
 
-target_link_libraries(MonicaImageProcess ${OpenCV_LIBS})
-target_link_libraries(MonicaImageProcess ${ONNXRUNTIME_ROOT}/lib/libonnxruntime.1.10.0.dylib)
+    target_link_libraries(MonicaImageProcess ${OpenCV_LIBS})
+    target_link_libraries(MonicaImageProcess ${ONNXRUNTIME_ROOT}/lib/libonnxruntime.1.10.0.dylib)
+endif ()
