--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ if (${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CURRENT_PLATFORM} MATCHES "x86")
             src/faceDetect/FaceDetect.cpp include/faceDetect/FaceDetect.h
             src/sketchDrawing/SketchDrawing.cpp include/sketchDrawing/SketchDrawing.h
             src/faceSwap/Yolov8Face.cpp include/faceSwap/Yolov8Face.h
+            src/faceSwap/Face68Landmarks.cpp include/faceSwap/Face68Landmarks.h
             include/Constants.h
             src/utils/Timer.cpp include/utils/Timer.h
             src/utils/Utils.cpp include/utils/Utils.h)
