--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ if (${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CMAKE_HOST_SYSTEM_PROCESSOR} MATCHES
             src/faceSwap/FaceSwap.cpp include/faceSwap/FaceSwap.h
             src/utils/Timer.cpp include/utils/Timer.h
             src/utils/Utils.cpp include/utils/Utils.h
-            include/Constants.h )
+            include/Constants.h include/faceSwap/FaceEnhance.h src/faceSwap/FaceEnhance.cpp)
 
     target_link_libraries(MonicaImageProcess ${OpenCV_LIBS})
     target_link_libraries(MonicaImageProcess ${ONNXRUNTIME_ROOT}/lib/libonnxruntime.1.10.0.dylib)
@@ -84,7 +84,7 @@ elseif(${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CMAKE_HOST_SYSTEM_PROCESSOR} MATC
             src/faceSwap/FaceSwap.cpp include/faceSwap/FaceSwap.h
             src/utils/Timer.cpp include/utils/Timer.h
             src/utils/Utils.cpp include/utils/Utils.h
-            include/Constants.h)
+            include/Constants.h include/faceSwap/FaceEnhance.h)
 
     target_link_libraries(MonicaImageProcess_aarch64 ${OpenCV_LIBS})
     target_link_libraries(MonicaImageProcess_aarch64 ${ONNXRUNTIME_ROOT}/lib/libonnxruntime.1.10.0.dylib)
