--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,10 +59,10 @@ if (${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CMAKE_HOST_SYSTEM_PROCESSOR} MATCHES
             src/faceSwap/FaceSwap.cpp include/faceSwap/FaceSwap.h
             src/faceSwap/FaceEnhance.cpp include/faceSwap/FaceEnhance.h
             src/colorcorrection/ColorCorrection.cpp include/colorcorrection/ColorCorrection.h
+            src/matchTemplate/MatchTemplate.cpp include/matchTemplate/MatchTemplate.h
             src/utils/Timer.cpp include/utils/Timer.h
             src/utils/Utils.cpp include/utils/Utils.h
-            include/Constants.h
-            include/matchTemplate/MatchTemplate.h)
+            include/Constants.h)
 
     target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
     target_link_libraries(${PROJECT_NAME} ${ONNXRUNTIME_ROOT}/lib/libonnxruntime.1.10.0.dylib)
@@ -87,12 +87,11 @@ elseif(${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CMAKE_HOST_SYSTEM_PROCESSOR} MATC
             src/faceSwap/FaceSwap.cpp include/faceSwap/FaceSwap.h
             src/faceSwap/FaceEnhance.cpp include/faceSwap/FaceEnhance.h
             src/colorcorrection/ColorCorrection.cpp include/colorcorrection/ColorCorrection.h
+            src/matchTemplate/MatchTemplate.cpp include/matchTemplate/MatchTemplate.h
             src/utils/Timer.cpp include/utils/Timer.h
             src/utils/Utils.cpp include/utils/Utils.h
-            include/Constants.h
-            include/matchTemplate/MatchTemplate.h)
+            include/Constants.h)
 
     target_link_libraries(MonicaImageProcess_aarch64 ${OpenCV_LIBS})
     target_link_libraries(MonicaImageProcess_aarch64 ${ONNXRUNTIME_ROOT}/lib/libonnxruntime.1.10.0.dylib)
-
 endif ()
