--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -38,6 +38,7 @@ if (${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CMAKE_HOST_SYSTEM_PROCESSOR} MATCHES
         GlobalResource.h                            GlobalResource.cpp
         HttpUtils.h                                 HttpUtils.cpp
         ../../include/sketchDrawing/SketchDrawing.h ../sketchDrawing/SketchDrawing.cpp
+        ../../include/faceDetect/FaceDetect.h       ../faceDetect/FaceDetect.cpp
         ../../include/common/OnnxRuntimeBase.h      ../common/OnnxRuntimeBase.cpp
         ../../include/utils/Timer.h                 ../utils/Timer.cpp)
 
@@ -57,6 +58,7 @@ elseif(${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CMAKE_HOST_SYSTEM_PROCESSOR} MATC
             GlobalResource.h                            GlobalResource.cpp
             HttpUtils.h                                 HttpUtils.cpp
             ../../include/sketchDrawing/SketchDrawing.h ../sketchDrawing/SketchDrawing.cpp
+            ../../include/faceDetect/FaceDetect.h       ../faceDetect/FaceDetect.cpp
             ../../include/common/OnnxRuntimeBase.h      ../common/OnnxRuntimeBase.cpp
             ../../include/utils/Timer.h                 ../utils/Timer.cpp)
 
