--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -53,6 +53,8 @@ if (${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CMAKE_HOST_SYSTEM_PROCESSOR} MATCHES
     target_link_libraries(${PROJECT_NAME} ${ONNXRUNTIME_ROOT}/lib/libonnxruntime.1.10.0.dylib)
 
 elseif(${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CMAKE_HOST_SYSTEM_PROCESSOR} MATCHES "arm64")
+    set(ARM64_PROJECT_NAME "MonicaImageProcessHttpServerForAARCH64")
+
     # 指定ONNX Runtime的路径
     set(ONNXRUNTIME_ROOT "/Users/tony/onnxruntime/onnxruntime-osx-arm64-1.10.0")
     # 包含ONNX Runtime头文件
@@ -60,7 +62,7 @@ elseif(${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CMAKE_HOST_SYSTEM_PROCESSOR} MATC
     # 查找ONNX Runtime库文件
     find_library(ONNXRUNTIME_LIBS onnx-runtime PATHS ${ONNXRUNTIME_ROOT}/lib)
 
-    add_executable(${PROJECT_NAME}_aarch64 main.cpp
+    add_executable(${MonicaImageProcessHttpServerForAARCH64} main.cpp
             GlobalResource.h                            GlobalResource.cpp
             HttpUtils.h                                 HttpUtils.cpp
             ../../include/sketchDrawing/SketchDrawing.h ../sketchDrawing/SketchDrawing.cpp
@@ -74,7 +76,7 @@ elseif(${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CMAKE_HOST_SYSTEM_PROCESSOR} MATC
             ../../include/utils/Timer.h                 ../utils/Timer.cpp
             ../../include/utils/Utils.h                 ../utils/Utils.cpp)
 
-    target_link_libraries(${PROJECT_NAME}_aarch64 ${OpenCV_LIBS})
-    target_link_libraries(${PROJECT_NAME}_aarch64 ${Boost_LIBRARIES})
-    target_link_libraries(${PROJECT_NAME}_aarch64 ${ONNXRUNTIME_ROOT}/lib/libonnxruntime.1.10.0.dylib)
+    target_link_libraries(${MonicaImageProcessHttpServerForAARCH64} ${OpenCV_LIBS})
+    target_link_libraries(${MonicaImageProcessHttpServerForAARCH64} ${Boost_LIBRARIES})
+    target_link_libraries(${MonicaImageProcessHttpServerForAARCH64} ${ONNXRUNTIME_ROOT}/lib/libonnxruntime.1.10.0.dylib)
 endif ()
